@@ -1,0 +1,9 @@
+CREATE TABLE sales ( col1 int, col2 int)
+PARTITION BY RANGE (col1)
+ (
+  PARTITION col1 VALUES LESS THAN (2),
+  PARTITION col1 VALUES LESS THAN (5),
+  PARTITION col1 VALUES LESS THAN (MAXVALUE)
+ );
+
+
